# seemps

./: .gitattributes  .gitignore  File 0 - Root.ipynb  File 1a - MPS class.ipynb  File 1b - MPS sample states.ipynb  File 1c - Canonical form.ipynb  File 1d - Matrix Product Operators.ipynb  File 2a - Expectation values.ipynb  File 3a - Truncating an MPS.ipynb  File 3c - Hamiltonians and operators.ipynb  File 4a - Time evolution - TEBD-2.ipynb  File 4a - Time evolution - TEBD-3.ipynb  File 4a - Time evolution - TEBD-Copy1.ipynb  File 4a - Time evolution - TEBD.ipynb  File 4b - Expectation values.ipynb  File 5a - Quantum Fourier Transform.ipynb  File 5b - Algebraic operators.ipynb  LICENSE  Makefile  README.md  Untitled.ipynb  foo.txt  make.cmd  pyproject.toml  pyproyect.yml  setup.py
benchmark/: benchmark.py  benchmark_mps.py
docs/: conf.py  getting_started.rst  index.rst  seemps_algorithms.rst  seemps_hdf5.rst  seemps_objects.rst  seemps_objects_canonical.rst  seemps_objects_hamiltonians.rst  seemps_objects_mpo.rst  seemps_objects_mps.rst  seemps_objects_sum.rst  seemps_register.rst  seemps_tools.rst
fig_pdf/: apply_mpo_to2site.tex
figures/: fig-mps.odg
mps/: __init__.py  algebraic_mpo.py  evolution.py  expectation.py  hamiltonians.py  mpo.py  qft.py  register.py  state.py  tools.py  truncate.py  version.py
notebooks/: File 0 - Root.ipynb  File 1a - MPS class.ipynb  File 1c - Canonical form.ipynb  File 1d - Matrix Product Operators.ipynb  File 2a - Expectation values.ipynb  File 3a - Truncating an MPS.ipynb  File 3c - Hamiltonians and operators.ipynb  (+1 more)
(+94 files in other folders)
