[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "SeeMPS"
version = "1.0"
dependencies = [
    "numpy",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/juanjosegarciaripoll/seemps"

[tool.pytest.ini_options]
testpaths=["tests"]