[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SeeMPS"
version = "1.0"
dependencies = ["numpy", "scipy", "h5py"]

[project.urls]
"Homepage" = "https://github.com/juanjosegarciaripoll/seemps"

[tool.pytest.ini_options]
testpaths = ["tests"]
