[build-system]
requires = ["setuptools", "cython>=3.0.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "SeeMPS"
version = "1.2"
dependencies = ["numpy", "scipy", "h5py"]

[project.urls]
"Homepage" = "https://github.com/juanjosegarciaripoll/seemps"

[tool.pytest.ini_options]
testpaths = ["tests"]
